// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AggregatedTranscriptions Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dwEnuX"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 irRPqL sc-cSHVUG hDUXUW"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 kWsDmD"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 eBtkDK"
          >
            <span
              className="StyledText-sc-1sadyjn-0 kItKvV"
              size="1em"
            >
              Transcribed Text
            </span>
            <button
              className="StyledButton-sc-323bzc-0 eDTDBY"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ibNMyq"
                size="small"
              >
                ADD LINE
              </span>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 cVfyEW sc-chPdSV lxGhg"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 dGnQel"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 kjivgS"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 jhfXfP"
                >
                  <h6
                    className="sc-gzVnrw kDhxVb"
                  >
                    Aggregated Transcription
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 iYntKu"
                >
                  <h6
                    className="sc-gzVnrw kDhxVb"
                  >
                    Flag
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 iSTKXf"
                >
                  <h6
                    className="sc-gzVnrw sc-htoDjs GbAiK"
                  >
                    Consensus Score
                  </h6>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 eSKOkP"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 ilsTzm sc-bZQynM evmlAb"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 RVZwg"
                  size="xsmall"
                >
                  This page does not contain transcription data.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AggregationSettings Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 bqaot"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 ehyleK sc-eNQAEJ esYNcD"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-ellipsis "
          data-icon="ellipsis"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M120 256C120 286.9 94.93 312 64 312C33.07 312 8 286.9 8 256C8 225.1 33.07 200 64 200C94.93 200 120 225.1 120 256zM280 256C280 286.9 254.9 312 224 312C193.1 312 168 286.9 168 256C168 225.1 193.1 200 224 200C254.9 200 280 225.1 280 256zM328 256C328 225.1 353.1 200 384 200C414.9 200 440 225.1 440 256C440 286.9 414.9 312 384 312C353.1 312 328 286.9 328 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="StyledStack-sc-ajspsk-0 iHjoYe"
      >
        <div
          className="StyledStack__StyledStackLayer-sc-ajspsk-1 jiApIn"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iYntKu"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 dBvOPe"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ibNMyq"
              >
                Edit Aggregation Settings
              </span>
              <button
                aria-label="Close Aggregation Settings"
                className="StyledButton-sc-323bzc-0 eDTDBY"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle-xmark "
                  data-icon="circle-xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM175 208.1L222.1 255.1L175 303C165.7 312.4 165.7 327.6 175 336.1C184.4 346.3 199.6 346.3 208.1 336.1L255.1 289.9L303 336.1C312.4 346.3 327.6 346.3 336.1 336.1C346.3 327.6 346.3 312.4 336.1 303L289.9 255.1L336.1 208.1C346.3 199.6 346.3 184.4 336.1 175C327.6 165.7 312.4 165.7 303 175L255.1 222.1L208.1 175C199.6 165.7 184.4 165.7 175 175C165.7 184.4 165.7 199.6 175 208.1V208.1z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </div>
            <div
              className="StyledBox-sc-13pk1d4-0 iYntKu"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 iYntKu"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 ohWhF"
                >
                  <span
                    className="StyledText-sc-1sadyjn-0 ibNMyq"
                  >
                    Choose a clustering algorithm based on the way in which transcriptions have been made.
                  </span>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                  />
                  <div
                    className="StyledBox-sc-13pk1d4-0 hbspRQ"
                  >
                    <button
                      className="StyledButton-sc-323bzc-0 eDTDBY"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 ohWhF sc-kGXeez fOyJew"
                      >
                        <img
                          alt="Optics Aggregation Example"
                          className="StyledImage-sc-ey4zx9-0 iSpWZD"
                          onLoad={[Function]}
                          src="optics.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 ibNMyq"
                        >
                          OPTICS Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 RVZwg"
                          size="xsmall"
                        >
                          Used for clustering full-width transcriptions
                        </span>
                      </div>
                    </button>
                    <button
                      className="StyledButton-sc-323bzc-0 eDTDBY"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 ohWhF sc-kpOJdX kdgkNy"
                      >
                        <img
                          alt="DBScan Aggregation Example"
                          className="StyledImage-sc-ey4zx9-0 iSpWZD"
                          onLoad={[Function]}
                          src="dbscan.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 ibNMyq"
                        >
                          DBSCAN Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 RVZwg"
                          size="xsmall"
                        >
                          Used for clustering shorter, incomplete transcriptions of a line
                        </span>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 hGlvOv"
                >
                  <button
                    aria-label="Close Aggregation Settings"
                    className="StyledButton-sc-323bzc-0 eDTDBY"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 ibNMyq"
                      size="small"
                    >
                      CLOSE AND CANCEL
                    </span>
                  </button>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gSOXbB"
                  />
                  <button
                    className="StyledButton-sc-323bzc-0 edSFVv"
                    disabled={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 ibNMyq"
                      size="small"
                    >
                      NEXT
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DownloadDataModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 bOnDuA"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gPJlMN"
      >
        <span
          className="StyledText-sc-1sadyjn-0 bFwqjc"
          size="large"
        >
          Download subject data
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gSOXbB"
        />
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 kxezLV"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle-xmark fa-xs "
            data-icon="circle-xmark"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM175 208.1L222.1 255.1L175 303C165.7 312.4 165.7 327.6 175 336.1C184.4 346.3 199.6 346.3 208.1 336.1L255.1 289.9L303 336.1C312.4 346.3 327.6 346.3 336.1 336.1C346.3 327.6 346.3 312.4 336.1 303L289.9 255.1L336.1 208.1C346.3 199.6 346.3 184.4 336.1 175C327.6 165.7 312.4 165.7 303 175L255.1 222.1L208.1 175C199.6 165.7 184.4 165.7 175 175C165.7 184.4 165.7 199.6 175 208.1V208.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 liotTx"
      >
        Download a .zip file containing:
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 iYntKu"
      >
        <span
          className="StyledText-sc-1sadyjn-0 ibNMyq"
          size="small"
        >
          • Line by line transcription and metadata (.csv)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
        />
        <span
          className="StyledText-sc-1sadyjn-0 ibNMyq"
          size="small"
        >
          • Text-only file (.txt)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
        />
        <span
          className="StyledText-sc-1sadyjn-0 ibNMyq"
          size="small"
        >
          • Raw, unparsed transcription data (.json)
        </span>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 hSKaAI"
      >
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq"
            size="small"
          >
            CLOSE
          </span>
        </button>
        <button
          aria-label="Download Subject Data"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq"
            size="small"
          >
            DOWNLOAD
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FilmstripViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kRqKFZ sc-jAaTju lEldS"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gPJlMN"
      >
        <span
          className="StyledText-sc-1sadyjn-0 kItKvV"
          size="1em"
        >
          All Pages
        </span>
        <button
          className="StyledButton-sc-323bzc-0 eDTDBY"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq sc-jDwBTQ eYRRwn"
          >
            Delete Pages
          </span>
        </button>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 galHFf"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots HeaderButtons LayoutButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    className="StyledButton-sc-323bzc-0 eDTDBY"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iPNppa"
    >
      <span
        className="StyledText-sc-1sadyjn-0 cWmfjX sc-hMqMXs hCtDtz"
      >
        Layout
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 kOByep"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 lfmUmX"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-xs "
          color="#555555"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M272 63.1l-32 0c-26.51 0-48 21.49-48 47.1v288c0 26.51 21.49 48 48 48L272 448c26.51 0 48-21.49 48-48v-288C320 85.49 298.5 63.1 272 63.1zM80 63.1l-32 0c-26.51 0-48 21.49-48 48v288C0 426.5 21.49 448 48 448l32 0c26.51 0 48-21.49 48-48v-288C128 85.49 106.5 63.1 80 63.1z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gEstju"
        />
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-xs fa-rotate-90 "
          color="#CCCCCC"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M272 63.1l-32 0c-26.51 0-48 21.49-48 47.1v288c0 26.51 21.49 48 48 48L272 448c26.51 0 48-21.49 48-48v-288C320 85.49 298.5 63.1 272 63.1zM80 63.1l-32 0c-26.51 0-48 21.49-48 48v288C0 426.5 21.49 448 48 448l32 0c26.51 0 48-21.49 48-48v-288C128 85.49 106.5 63.1 80 63.1z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons MoreButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    aria-label="Open Drop"
    className="StyledButton-sc-323bzc-0 eDTDBY"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 hgdohb"
    >
      <span
        className="StyledText-sc-1sadyjn-0 cWmfjX"
      >
        MORE
      </span>
      <svg
        aria-label="FormDown"
        className="StyledIcon-sc-ofa7kd-0 bFNbxN"
        viewBox="0 0 24 24"
      >
        <path
          d="m18 9-6 6-6-6"
          fill="none"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons UndoButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    className="StyledButton-sc-323bzc-0 edSFVv"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iPNppa"
    >
      <span
        className="StyledText-sc-1sadyjn-0 cWmfjX sc-hMqMXs hCtDtz"
      >
        Undo
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 kOByep"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-arrow-rotate-right fa-xs "
        color="#555555"
        data-icon="arrow-rotate-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M496 48V192c0 17.69-14.31 32-32 32H320c-17.69 0-32-14.31-32-32s14.31-32 32-32h63.39c-29.97-39.7-77.25-63.78-127.6-63.78C167.7 96.22 96 167.9 96 256s71.69 159.8 159.8 159.8c34.88 0 68.03-11.03 95.88-31.94c14.22-10.53 34.22-7.75 44.81 6.375c10.59 14.16 7.75 34.22-6.375 44.81c-39.03 29.28-85.36 44.86-134.2 44.86C132.5 479.9 32 379.4 32 256s100.5-223.9 223.9-223.9c69.15 0 134 32.47 176.1 86.12V48c0-17.69 14.31-32 32-32S496 30.31 496 48z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots LineViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  />
</div>
`;

exports[`Storyshots MarkApproved Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <label
    checked={false}
    className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 yBfvd"
    disabled={false}
    label={
      <Styled(Text)
        color="#5C5C5C"
      >
        Ready For Review
      </Styled(Text)>
    }
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="StyledText-sc-1sadyjn-0 cWmfjX sc-kEYyzF ggEPv"
    >
      Ready For Review
    </span>
    <div
      checked={false}
      className="StyledBox-sc-13pk1d4-0 gqiZYy StyledCheckBox-sc-1dbk5ju-6 jXdLin"
      disabled={false}
    >
      <input
        checked={false}
        className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cmPpnw"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        checked={false}
        className="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 fUIWkU"
        disabled={false}
      >
        <span
          checked={false}
          className="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 GTsLr"
          disabled={false}
        />
      </span>
    </div>
  </label>
</div>
`;

exports[`Storyshots MetadataButton Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 bXNMyQ"
    >
      <button
        aria-label="Open Metadata Information"
        className="StyledButton-sc-323bzc-0 bggMKZ"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ZHBjp"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info sc-cvbbAY josHqt"
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M160 448h-32V224c0-17.69-14.33-32-32-32L32 192c-17.67 0-32 14.31-32 32s14.33 31.1 32 31.1h32v192H32c-17.67 0-32 14.31-32 32s14.33 32 32 32h128c17.67 0 32-14.31 32-32S177.7 448 160 448zM96 128c26.51 0 48-21.49 48-48S122.5 32.01 96 32.01s-48 21.49-48 48S69.49 128 96 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SearchModalContainer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kYlaKZ"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 cUPvPZ"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 iYntKu"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 fXgVZL"
          >
            <span
              className="StyledText-sc-1sadyjn-0 bFwqjc"
              size="large"
            >
              Search or Filter
            </span>
            <button
              aria-label="Close Subject Search Modal"
              className="StyledButton-sc-323bzc-0 bggMKZ"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-circle-xmark "
                data-icon="circle-xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM175 208.1L222.1 255.1L175 303C165.7 312.4 165.7 327.6 175 336.1C184.4 346.3 199.6 346.3 208.1 336.1L255.1 289.9L303 336.1C312.4 346.3 327.6 346.3 336.1 336.1C346.3 327.6 346.3 312.4 336.1 303L289.9 255.1L336.1 208.1C346.3 199.6 346.3 184.4 336.1 175C327.6 165.7 312.4 165.7 303 175L255.1 222.1L208.1 175C199.6 165.7 184.4 165.7 175 175C165.7 184.4 165.7 199.6 175 208.1V208.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
          />
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq sc-jlyJG iqYbEW"
          >
            Find a specific subject
          </span>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
          />
          <form
            className="StyledBox-sc-13pk1d4-0 iYntKu"
            onSubmit={[Function]}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 YtNpL"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 bVFppQ"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 iYntKu FormField__FormFieldBox-sc-m9hood-0 eXFEgp sc-gipzik keWqgP"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 gqCeYR"
                    htmlFor="type"
                  >
                    ID TYPE
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 cNNIgr FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <button
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-label="Open Drop; Selected: [object Object]"
                      className="StyledButton-sc-323bzc-0 eDTDBY Select__StyledSelectDropButton-sc-17idtfo-2 gGPOvJ"
                      id="type"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 fXgVZL"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 eCRfzy"
                        >
                          <span
                            className="StyledText-sc-1sadyjn-0 ibNMyq"
                          >
                            Select...
                          </span>
                          <input
                            className="Select__HiddenInput-sc-17idtfo-1 gLckHE"
                            id="type__input"
                            name="type"
                            readOnly={true}
                            type="text"
                          />
                        </div>
                        <div
                          className="StyledBox-sc-13pk1d4-0 kpOcBE"
                          style={
                            Object {
                              "minWidth": "auto",
                            }
                          }
                        >
                          <svg
                            aria-label="FormDown"
                            className="StyledIcon-sc-ofa7kd-0 jowTsj"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="m18 9-6 6-6-6"
                              fill="none"
                              stroke="#000"
                              strokeWidth="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jZnmGk"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 iOnaLF"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 iYntKu FormField__FormFieldBox-sc-m9hood-0 eXFEgp sc-gipzik keWqgP"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 gqCeYR"
                    htmlFor="id"
                  >
                    NAME
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 cNNIgr FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kYQCpm"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 ddiGfT"
                        color="red"
                        disabled={false}
                        id="id"
                        name="id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="eg. 58674"
                        size="small"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
            />
            <span
              className="StyledText-sc-1sadyjn-0 ibNMyq sc-jlyJG iqYbEW"
            >
              Filter subject list by status
            </span>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 gPJlMN"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 iYntKu"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 iEktqY"
                >
                  Approval Status
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iYntKu FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cNNIgr FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="unseen"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          UNSEEN
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iFSids StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="unseen"
                          name="unseen"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 diPsgx StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        UNSEEN
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iYntKu FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cNNIgr FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="in_progress"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          IN PROGRESS
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iFSids StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="in_progress"
                          name="in_progress"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 diPsgx StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        IN PROGRESS
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iYntKu FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cNNIgr FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="ready"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          READY FOR REVIEW
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iFSids StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="ready"
                          name="ready"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 diPsgx StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        READY FOR REVIEW
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iYntKu FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cNNIgr FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="approved"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          APPROVED
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iFSids StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="approved"
                          name="approved"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 diPsgx StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        APPROVED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 iYntKu"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 iEktqY"
                >
                  Additional Filters
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iYntKu FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cNNIgr FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="flagged"
                      label={
                        <Text
                          level={1}
                          size="small"
                        >
                          FLAGGED
                        </Text>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iFSids StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="flagged"
                          name="flagged"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 diPsgx StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        FLAGGED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 hSKaAI"
            >
              <button
                aria-label="Close Subject Search Modal"
                className="StyledButton-sc-323bzc-0 eDTDBY"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 ibNMyq sc-jlyJG iqYbEW"
                >
                  Close
                </span>
              </button>
              <button
                aria-label="Submit Subject Search Query"
                className="StyledButton-sc-323bzc-0 eDTDBY"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="submit"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 ibNMyq sc-jlyJG iqYbEW"
                >
                  Search
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectLockedModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 hkCoks"
    >
      <span
        className="StyledText-sc-1sadyjn-0 bFwqjc"
        size="large"
      >
        Subject locked
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ibNMyq sc-gPEVay yONTa"
      >
        This subject cannot be accessed because 
        <strong />
         is currently accessing it.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ibNMyq sc-gPEVay yONTa"
      >
        For access, ask them to close their version.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <button
        aria-label="Return to Group Index Page"
        className="StyledButton-sc-323bzc-0 dPtlpN"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span
          className="StyledText-sc-1sadyjn-0 ibNMyq"
          size="small"
        >
          BACK TO GROUP INDEX
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 jeSEdO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 ILkBc"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="StyledBox-sc-13pk1d4-0 jbrYGY"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 fXgVZL"
        >
          <span
            className="StyledText-sc-1sadyjn-0 kItKvV"
            size="1em"
          >
            Original Subject
          </span>
          <div
            className="StyledBox-sc-13pk1d4-0 lfmUmX"
          >
            <button
              className="StyledButton-sc-323bzc-0 dPtlpN"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ibNMyq"
              >
                HIDE ALL LINES
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 cdwQai sc-hzDkRC eniHZY"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cdwQai sc-jhAzac ZlZeV"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 cadKlJ sc-bRBYWo cfFjGV"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 iYntKu sc-jhAzac sc-fBuWsC deBBpZ"
          />
        </div>
        <div
          className="StyledBox-sc-13pk1d4-0 cdwQai"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UnapproveModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 fmXOTO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 hkCoks"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gPJlMN"
      >
        <span
          className="StyledText-sc-1sadyjn-0 bFwqjc"
          size="large"
        >
          Unapprove subject data
        </span>
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle-xmark fa-xs "
            data-icon="circle-xmark"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM175 208.1L222.1 255.1L175 303C165.7 312.4 165.7 327.6 175 336.1C184.4 346.3 199.6 346.3 208.1 336.1L255.1 289.9L303 336.1C312.4 346.3 327.6 346.3 336.1 336.1C346.3 327.6 346.3 312.4 336.1 303L289.9 255.1L336.1 208.1C346.3 199.6 346.3 184.4 336.1 175C327.6 165.7 312.4 165.7 303 175L255.1 222.1L208.1 175C199.6 165.7 184.4 165.7 175 175C165.7 184.4 165.7 199.6 175 208.1V208.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ibNMyq sc-iRbamj jHMZAa"
      >
        By unapproving this subject, the subject's data will be unavailable for future downloads until re-marked as approved.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ibNMyq sc-iRbamj jHMZAa"
      >
        This action can be reversed at any time.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 hSKaAI"
      >
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq"
            size="small"
          >
            CLOSE AND CANCEL
          </span>
        </button>
        <button
          aria-label="Confirm to Unapprove Subject"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq"
            size="small"
          >
            YES, UNAPPROVE
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
